Various UI tweaks

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
 	
 	
 	<body class="claro">
+		<div id="titleBar">
+			<div id="titleText">Avalanche Finder</div>
+			<div id="esriLogo"><img id="esriLogoImage" src="images/esri-17GlobeLogo_tag-right_1CRev.png"/></div>
+			
+		</div>
+		
 		<div id="mapDiv"></div>
 
 		<div id="controlsDiv" data-dojo-type="dijit/TitlePane" data-dojo-props="title:'Parameters'">
