--- a/index.html
+++ b/index.html
@@ -36,11 +36,15 @@
 		<div id="titleBar">
 			<div id="titleText">Avalanche Finder</div>
 			<div id="esriLogo"><img id="esriLogoImage" src="images/esri-17GlobeLogo_tag-right_1CRev.png"/></div>
-			
 		</div>
 		
 		<div id="mapDiv"></div>
 
+		<div id="basemapGalleryDiv"></div>
+<!-- 		<div data-dojo-type="dijit/TitlePane" data-dojo-props="title:'Basemaps'">
+			<div id="basemapGalleryDiv" data-dojo-type="dijit/layout/ContentPane"></div>
+		</div> -->
+		
 		<div id="controlsDiv" data-dojo-type="dijit/TitlePane" data-dojo-props="title:'Parameters'">
 			<table id="controlsTable">
 				<tr>
